force-app/main/default/objects/Logger__c/Logger__c.object-meta.xml
<CustomObject>
    <label>Logger</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>