force-app/main/default/objects/Logger__c/fields/LoadId__c.field-meta.xml
<CustomField>
    <fullName>LoadId__c</fullName>
    <label>Load Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>