force-app/main/default/objects/Logger__c/fields/LoggedTime__c.field-meta.xml
<CustomField>
    <fullName>LoggedTime__c</fullName>
    <label>Logged Time</label>
    <type>DateTime</type>
</CustomField>